--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,7 @@
 @import "activities/folder";
 @import "activities/forum";
 @import "activities/glossary";
+@import "activities/groupchoice";
 @import "activities/kalvidassign";
 @import "activities/lesson";
 @import "activities/lti";
