--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -311,6 +311,12 @@
               }
             }
           }
+          ul li.activity.label ul, ul li.activity.label ol {
+            margin-bottom: $component-margin-bottom;
+            ul, ol {
+              margin-bottom: 0;
+            }
+          }
         }
       }
       .gtopics {
