--- a/scss/activities/_assignment.scss
+++ b/scss/activities/_assignment.scss
@@ -314,6 +314,11 @@
     }
   }
   &#page-mod-assign-grading, #page-grade-report-grader-index {
+    @media only screen and (min-width: 1400px) {
+      #wrapper #page #page-header-nav, #wrapper #page #page-content {
+        max-width: 100%;
+      }
+    }
     .resettable.mdl-right {
       text-align: left;
       margin-top: 3rem;
