--- a/scss/print/_print.scss
+++ b/scss/print/_print.scss
@@ -46,8 +46,6 @@ $print-component-border: 2px solid $slate-grey;
   }
   h1, h2, h3, h4, h5, h6,
   .h1, .h2, .h3, .h4, .h5, .h6 {
-    page-break-after: avoid;
-    page-break-inside: avoid;
   }
   /*
   p, li {
@@ -67,7 +65,6 @@ $print-component-border: 2px solid $slate-grey;
     margin-left: 1px;
   }
   .quote-box {
-    page-break-inside: avoid;
     border: $print-component-border;
     margin-bottom: 1.25rem;
     position: relative;
@@ -156,7 +153,6 @@ $print-component-border: 2px solid $slate-grey;
 
   /* card and float box */
   .card {
-    page-break-inside: avoid;
     display: flex;
     flex-direction: row;
     border: $print-component-border;
@@ -190,7 +186,6 @@ $print-component-border: 2px solid $slate-grey;
     }
   }
   .card-deck {
-    page-break-inside: avoid;
     display: block;
     margin: 0;
     .card {
@@ -207,7 +202,6 @@ $print-component-border: 2px solid $slate-grey;
     }
   }
   .float-box {
-    page-break-inside: avoid;
     display: flex;
     margin-bottom: 1.25rem;
     .img-right {
@@ -225,7 +219,6 @@ $print-component-border: 2px solid $slate-grey;
       display: none;
     }
     .carousel-item {
-      page-break-inside: avoid;
       display: block;
       margin-bottom: 1.25rem;
       padding-top: 0 !important;
@@ -266,7 +259,6 @@ $print-component-border: 2px solid $slate-grey;
 
   /* collapse */
   .collapse-container {
-    page-break-inside: avoid;
     margin-bottom: 1.25rem;
     .collapse-card {
       border-bottom: 2px solid $pearl-grey;
@@ -351,7 +343,6 @@ $print-component-border: 2px solid $slate-grey;
   }
   /* transcript */
   .transcript-container {
-    page-break-inside: avoid;
     display: inline-block;
     width: calc(100% - 74px);
     margin-bottom: 1.25rem;
@@ -362,7 +353,6 @@ $print-component-border: 2px solid $slate-grey;
     .transcript-card {
       display: block;
       .card-body {
-        page-break-inside: avoid;
         border-left: 2px solid $slate-grey;
         padding-left: 1.25rem;
         padding-top: 3rem;
@@ -413,7 +403,6 @@ $print-component-border: 2px solid $slate-grey;
   .journal-box,
   .shared-box,
   .files-box {
-    page-break-inside: avoid;
     border: 2px solid $table-border !important;
     padding: 1.25rem !important;
     padding-left: 4rem !important;
@@ -446,11 +435,8 @@ $print-component-border: 2px solid $slate-grey;
     color: $body-text;
   }
   .alert-instructional {
+    padding: 1.25rem;
     background-color: $block-header !important;
-    > :first-child::before {
-      @include fa-content($fa-comments);
-      padding: 0 2px;
-    }
   }
   .editing-help-box {
     display: none;
@@ -508,7 +494,6 @@ $print-component-border: 2px solid $slate-grey;
 
   /* table */
   .table-bordered {
-    page-break-inside: avoid;
     border: 2px solid $slate-grey !important;
     border-radius: 0;
     border-collapse: collapse;
@@ -567,7 +552,6 @@ $print-component-border: 2px solid $slate-grey;
 
    /* timeline */
   .timeline-container {
-    page-break-inside: avoid;
     margin: calc(25px - 2.5rem) 0 0 0;
     padding: 0;
     overflow: hidden;
@@ -607,7 +591,6 @@ $print-component-border: 2px solid $slate-grey;
         }
       }
       .timeline-content {
-        page-break-inside: avoid;
         margin: 0 !important;
         padding: 0 !important;
         .timeline-card {
@@ -688,7 +671,6 @@ $print-component-border: 2px solid $slate-grey;
   .view-feedback-container,
   .view-generic-container,
   .view-model-answer-container {
-    page-break-inside: avoid;
     & > h3, h4, h5, h6, p {
       font-size: 1.2rem;
       margin-left: calc(150px + 1.25rem);
